--- a/Day2Part2/Properties/launchSettings.json
+++ b/Day2Part2/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Day2Part2": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\Users\\dmcmillan\\Downloads\\day2.part2.example.txt"
+      "commandLineArgs": "C:\\Users\\dmcmillan\\Downloads\\day2.part2.input.txt"
     }
   }
 }
