Day 3 Part 2 Completed.

--- a/Day3Part2/Properties/launchSettings.json
+++ b/Day3Part2/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Day3Part2": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\Users\\dmcmillan\\Downloads\\day3.part2.example.txt"
+      "commandLineArgs": "C:\\Users\\dmcmillan\\Downloads\\day3.part2.input.txt"
     }
   }
 }
